# cppautograd

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
computational_graph/include/computational_graph/: node.h
examples/: CMakeLists.txt
examples/example/: CMakeLists.txt
libs/: CMakeLists.txt
operators/: CMakeLists.txt
operators/include/operators/: operator.h
tensor/: CMakeLists.txt
variable/include/variable/: variable.h
variables/: CMakeLists.txt  variable.cpp
variables/include/variables/: variable.h
